syntax = "proto3";

package post;
option go_package = "proto;posts";

service Posts {
	rpc Save(SaveRequest) returns (SaveResponse) {}
}

message Post {
	string id = 1; //post id
	string title = 2;
	string slug = 3;
	string content = 4; 
	int64 timestamp = 5;
	repeated string tagNames = 6;
}
message SaveRequest {
	Post post = 1;
}

message SaveResponse {
	Post post = 1;
}